--- a/sample/src/main/res/layout/activity_base.xml
+++ b/sample/src/main/res/layout/activity_base.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".BaseActivity"
-    android:background="#fff">
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".BaseActivity"
+                android:background="#fff">
 
     <com.alamkanak.weekview.WeekView
         android:id="@+id/weekView"
@@ -25,5 +25,14 @@
         app:todayHeaderTextColor="@color/accent"
         app:newEventTimeResolutionInMinutes="15"
         app:showHalfHours="false" />
+
+    <TextView
+        android:id="@+id/draggable_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:background="#ffff0000"
+        android:padding="3dp"
+        android:text="@string/drag_me"/>
 
 </RelativeLayout>
