--- a/sample/src/main/res/layout/activity_base.xml
+++ b/sample/src/main/res/layout/activity_base.xml
@@ -27,7 +27,8 @@
         app:headerColumnBackground="#ffffffff"
         app:todayHeaderTextColor="@color/accent"
         app:newEventTimeResolutionInMinutes="15"
-        app:timeColumnResolution="60" />
+        app:timeColumnResolution="60"
+        app:dropListenerEnabled="true"/>
 
     <TextView
         android:id="@+id/draggable_view"
